--- a/templates/conventions_templateDVP.html
+++ b/templates/conventions_templateDVP.html
@@ -39,6 +39,18 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Date r&#233;ponse</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><%%COMBOTEXT(date_reponse)%%></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Demand&#233;</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><%%VALUE(demande)%%></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">D&#233;but</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(date_debut)%%></div>
@@ -90,6 +102,12 @@
 			<label class="col-xs-3 control-label">Reste &#224; Verser</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(reste_verser)%%></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Vers&#233; hors FG</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><%%VALUE(verse_hfg)%%></div>
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
