--- a/templates/conventions_templateTV.html
+++ b/templates/conventions_templateTV.html
@@ -9,6 +9,8 @@
 		<td id="conventions-statut-<%%VALUE(id)%%>" class="conventions-statut"><%%SELECT%%><%%VALUE(statut)%%><%%ENDSELECT%%></td>
 		<td id="conventions-bailleur-<%%VALUE(id)%%>" class="conventions-bailleur"><%%SELECT%%><%%VALUE(bailleur)%%><%%ENDSELECT%%></td>
 		<td id="conventions-porteur-<%%VALUE(id)%%>" class="conventions-porteur"><%%SELECT%%><%%VALUE(porteur)%%><%%ENDSELECT%%></td>
+		<td id="conventions-date_reponse-<%%VALUE(id)%%>" class="conventions-date_reponse"><%%SELECT%%><%%VALUE(date_reponse)%%><%%ENDSELECT%%></td>
+		<td id="conventions-demande-<%%VALUE(id)%%>" class="conventions-demande text-right"><%%VALUE(demande)%%></td>
 		<td id="conventions-date_debut-<%%VALUE(id)%%>" class="conventions-date_debut"><%%SELECT%%><%%VALUE(date_debut)%%><%%ENDSELECT%%></td>
 		<td id="conventions-date_fin-<%%VALUE(id)%%>" class="conventions-date_fin"><%%SELECT%%><%%VALUE(date_fin)%%><%%ENDSELECT%%></td>
 		<td id="conventions-duree-<%%VALUE(id)%%>" class="conventions-duree text-right"><%%SELECT%%><%%VALUE(duree)%%><%%ENDSELECT%%></td>
@@ -17,6 +19,7 @@
 		<td id="conventions-accorde-<%%VALUE(id)%%>" class="conventions-accorde text-right"><%%VALUE(accorde)%%></td>
 		<td id="conventions-verse-<%%VALUE(id)%%>" class="conventions-verse text-right"><%%VALUE(verse)%%></td>
 		<td id="conventions-reste_verser-<%%VALUE(id)%%>" class="conventions-reste_verser text-right"><%%VALUE(reste_verser)%%></td>
+		<td id="conventions-verse_hfg-<%%VALUE(id)%%>" class="conventions-verse_hfg text-right"><%%VALUE(verse_hfg)%%></td>
 		<td id="conventions-ouvert-<%%VALUE(id)%%>" class="conventions-ouvert text-right"><%%VALUE(ouvert)%%></td>
 		<td id="conventions-reste_ouvrir-<%%VALUE(id)%%>" class="conventions-reste_ouvrir text-right"><%%VALUE(reste_ouvrir)%%></td>
 		<td id="conventions-reserve-<%%VALUE(id)%%>" class="conventions-reserve text-right"><%%VALUE(reserve)%%></td>
