--- a/templates/budgets_templateDV.html
+++ b/templates/budgets_templateDV.html
@@ -78,7 +78,7 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
-					<label for="reserve" class="control-label col-lg-3">Reserv&#233;</label>
+					<label for="reserve" class="control-label col-lg-3">R&#233;serv&#233;</label>
 					<div class="col-lg-9">
 						<input maxlength="13" type="text" class="form-control" name="reserve" id="reserve" value="<%%VALUE(reserve)%%>">
 					</div>
