--- a/templates/ventilation_templateDVP.html
+++ b/templates/ventilation_templateDVP.html
@@ -33,13 +33,13 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
-			<label class="col-xs-3 control-label">Accord&#233;</label>
+			<label class="col-xs-3 control-label">Pr&#233;visionnel</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(accorde)%%></div>
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
-			<label class="col-xs-3 control-label">Reserv&#233;</label>
+			<label class="col-xs-3 control-label">R&#233;serv&#233;</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(reserve)%%></div>
 			</div>
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
-			<label class="col-xs-3 control-label">U/A (%)</label>
+			<label class="col-xs-3 control-label">U/P (%)</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(prop_ua)%%></div>
 			</div>
