--- a/templates/depenses_templateTV.html
+++ b/templates/depenses_templateTV.html
@@ -10,6 +10,7 @@
 		<td id="depenses-ligne_credit-<%%VALUE(id)%%>" class="depenses-ligne_credit"><%%SELECT%%><%%VALUE(ligne_credit)%%><%%ENDSELECT%%></td>
 		<td id="depenses-date-<%%VALUE(id)%%>" class="depenses-date"><%%SELECT%%><%%VALUE(date)%%><%%ENDSELECT%%></td>
 		<td id="depenses-intitule-<%%VALUE(id)%%>" class="depenses-intitule"><%%SELECT%%><%%VALUE(intitule)%%><%%ENDSELECT%%></td>
+		<td id="depenses-contrat-<%%VALUE(id)%%>" class="depenses-contrat"><%%SELECT%%><%%VALUE(contrat)%%><%%ENDSELECT%%></td>
 		<td id="depenses-beneficiaire-<%%VALUE(id)%%>" class="depenses-beneficiaire"><%%SELECT%%><%%VALUE(beneficiaire)%%><%%ENDSELECT%%></td>
 		<td id="depenses-montant-<%%VALUE(id)%%>" class="depenses-montant text-right"><%%SELECT%%><%%VALUE(montant)%%><%%ENDSELECT%%></td>
 		<td id="depenses-statut-<%%VALUE(id)%%>" class="depenses-statut"><%%SELECT%%><%%VALUE(statut)%%><%%ENDSELECT%%></td>
