--- a/templates/depenses_templateTVS.html
+++ b/templates/depenses_templateTVS.html
@@ -10,6 +10,7 @@
 		<td id="depenses-ligne_credit-<%%VALUE(id)%%>" class="depenses-ligne_credit"><%%VALUE(ligne_credit)%%></td>
 		<td id="depenses-date-<%%VALUE(id)%%>" class="depenses-date"><%%VALUE(date)%%></td>
 		<td id="depenses-intitule-<%%VALUE(id)%%>" class="depenses-intitule"><%%VALUE(intitule)%%></td>
+		<td id="depenses-contrat-<%%VALUE(id)%%>" class="depenses-contrat"><%%VALUE(contrat)%%></td>
 		<td id="depenses-beneficiaire-<%%VALUE(id)%%>" class="depenses-beneficiaire"><%%VALUE(beneficiaire)%%></td>
 		<td id="depenses-montant-<%%VALUE(id)%%>" class="depenses-montant text-right"><%%VALUE(montant)%%></td>
 		<td id="depenses-statut-<%%VALUE(id)%%>" class="depenses-statut"><%%VALUE(statut)%%></td>
