--- a/templates/personnes_templateDV.html
+++ b/templates/personnes_templateDV.html
@@ -8,6 +8,7 @@
 	<div class="row vspacer-md">
 		<div class="col-xs-12">
 			<input type="hidden" id="conventions_hclink" value="conventions_view.php?filterer_porteur=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
+			<input type="hidden" id="recrutements_hclink" value="recrutements_view.php?filterer_beneficiaire=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
 			<input type="hidden" id="depenses_hclink" value="depenses_view.php?filterer_beneficiaire=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
 			<div class="clearfix"></div>
 		</div>
