--- a/templates/conventions_templateTVS.html
+++ b/templates/conventions_templateTVS.html
@@ -27,6 +27,8 @@
 		<td id="conventions-utilise-<%%VALUE(id)%%>" class="conventions-utilise text-right"><%%VALUE(utilise)%%></td>
 		<td id="conventions-disponible-<%%VALUE(id)%%>" class="conventions-disponible text-right"><%%VALUE(disponible)%%></td>
 		<td id="conventions-reste_engager-<%%VALUE(id)%%>" class="conventions-reste_engager text-right"><%%VALUE(reste_engager)%%></td>
+		<td id="conventions-reservation_salaire-<%%VALUE(id)%%>" class="conventions-reservation_salaire text-right"><%%VALUE(reservation_salaire)%%></td>
+		<td id="conventions-reste_depenser-<%%VALUE(id)%%>" class="conventions-reste_depenser text-right"><%%VALUE(reste_depenser)%%></td>
 		<td id="conventions-prop_uo-<%%VALUE(id)%%>" class="conventions-prop_uo text-right"><%%VALUE(prop_uo)%%></td>
 		<td id="conventions-prop_uv-<%%VALUE(id)%%>" class="conventions-prop_uv text-right"><%%VALUE(prop_uv)%%></td>
 		<td id="conventions-prop_ua-<%%VALUE(id)%%>" class="conventions-prop_ua text-right"><%%VALUE(prop_ua)%%></td>
