--- a/templates/ventilation_templateTVS.html
+++ b/templates/ventilation_templateTVS.html
@@ -13,4 +13,6 @@
 		<td id="ventilation-liquide-<%%VALUE(id)%%>" class="ventilation-liquide text-right"><%%VALUE(liquide)%%></td>
 		<td id="ventilation-utilise-<%%VALUE(id)%%>" class="ventilation-utilise text-right"><%%VALUE(utilise)%%></td>
 		<td id="ventilation-reste_engager-<%%VALUE(id)%%>" class="ventilation-reste_engager text-right"><%%VALUE(reste_engager)%%></td>
+		<td id="ventilation-reservation_salaire-<%%VALUE(id)%%>" class="ventilation-reservation_salaire text-right"><%%VALUE(reservation_salaire)%%></td>
+		<td id="ventilation-reste_depenser-<%%VALUE(id)%%>" class="ventilation-reste_depenser text-right"><%%VALUE(reste_depenser)%%></td>
 		<td id="ventilation-prop_ua-<%%VALUE(id)%%>" class="ventilation-prop_ua text-right"><%%VALUE(prop_ua)%%></td>
