--- a/templates/recrutements_templateDV.html
+++ b/templates/recrutements_templateDV.html
@@ -94,7 +94,7 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
-					<label for="previsionnel" class="control-label col-lg-3">Co&#251;t total pr&#233;vionnel</label>
+					<label for="previsionnel" class="control-label col-lg-3">Co&#251;t total pr&#233;visionnel</label>
 					<div class="col-lg-9">
 						<input maxlength="13" type="text" class="form-control" name="previsionnel" id="previsionnel" value="<%%VALUE(previsionnel)%%>">
 					</div>
