--- a/templates/recrutements_templateDVP.html
+++ b/templates/recrutements_templateDVP.html
@@ -69,7 +69,7 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
-			<label class="col-xs-3 control-label">Co&#251;t total pr&#233;vionnel</label>
+			<label class="col-xs-3 control-label">Co&#251;t total pr&#233;visionnel</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(previsionnel)%%></div>
 			</div>
